--- a/frontend/index.pug
+++ b/frontend/index.pug
@@ -2,7 +2,7 @@ doctype html
 html(lang="ja")
   head
     meta(charset="utf-8")
-    title uchiwa
+    title siggre
   body
-    h1 uchiwa
+    h1 siggre
     #game
