SASS を読み込む設定

--- a/frontend/index.pug
+++ b/frontend/index.pug
@@ -2,7 +2,14 @@ doctype html
 html(lang="ja")
   head
     meta(charset="utf-8")
+    link(rel="stylesheet", href="./style.css")
     title siggre
   body
-    h1 siggre
-    #game
+    header.header
+      .inner
+        h1.title siggre
+    main.main
+      .inner
+        #game
+    footer.footer
+      .inner
