--- a/frontend/index.pug
+++ b/frontend/index.pug
@@ -3,11 +3,11 @@ html(lang="ja")
   head
     meta(charset="utf-8")
     link(rel="stylesheet", href="./style.css")
-    title siggre
+    title hinano
   body
     header.header
       .inner
-        h1.title siggre
+        h1.title hinano
     main.main
       .inner
         #game
